fix portfolio section, hover/focus on footer and modal close buttons, gap between textarea and checkbox in modal window

--- a/css/styles.css
+++ b/css/styles.css
@@ -333,6 +333,7 @@ section {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
 
 .cases-list {
@@ -342,7 +343,7 @@ section {
 }
 
 .cases-item {
-  width: ((100% - 48px) / 3);
+  width: calc((100% - 48px) / 3);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -519,7 +520,7 @@ section {
 
 .footer-btn:hover,
 .footer-btn:focus {
-  background-color: #404bbf;
+  background-color: #31d0aa;
 }
 
 .subscribe-icon {
@@ -591,6 +592,14 @@ section {
 .modal-close:focus {
   border: none;
   background-color: #404bbf;
+}
+
+.modal-close-icon {
+  fill: #2e2f42;
+}
+
+.modal-close:hover .modal-close-icon,
+.modal-close:focus .modal-close-icon {
   fill: #ffffff;
 }
 
@@ -651,6 +660,10 @@ section {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+}
+
+.textarea-field {
+  margin-bottom: 16px;
 }
 
 .modal-textarea {
